force-app/main/default/objects/Test_Envio_Correo__mdt/fields/Proceso__c.field-meta.xml
<CustomField>
    <fullName>Proceso__c</fullName>
    <description>Proceso registrado en donde se define un correo de prueba</description>
    <label>Proceso</label>
    <length>80</length>
    <type>Text</type>
</CustomField>