force-app/main/default/objects/Test_Envio_Correo__mdt/fields/Test_email__c.field-meta.xml
<CustomField>
    <fullName>Test_email__c</fullName>
    <description>Correo de envio usado para pruebas</description>
    <label>Correo de prueba</label>
    <length>80</length>
    <type>Text</type>
</CustomField>