force-app/main/default/objects/Test_Envio_Correo__mdt/fields/Test_Mode__c.field-meta.xml
<CustomField>
    <fullName>Test_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Habilitar Prueba</label>
    <type>Checkbox</type>
</CustomField>